test/libsolidity/syntaxTests/arrayLength/not_convertible_to_integer.sol
contract C {
    uint[true] ids;
}
// ----
// TypeError: (22-26): Invalid array length, expected integer literal or constant expression.
